--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile-picture-serious.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame">
+        <img src="images/profile.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">
         <h1>Tadiwanashe Divine Adelaide Mphame</h1>
         <button class="hamburger-btn">&#9776;</button>
         <button hidden class="modal-close">X</button>
@@ -37,7 +37,7 @@
             <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
             <li><a href="project/index.html" target="_blank">Project</a></li>
             <li><a href="https://github.com/chrisedeson" target="_blank">Github Profile</a></li>
-            <li><a href="https://www.linkedin.com/in/christopher-edeson" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/divine-mphame" target="_blank">LinkedIn</a></li>
         </ul>
     </nav>
     <main>
@@ -51,7 +51,7 @@
         </section>
         <section class="location-panel">
             <h2>Pretoria, South Africa</h2>
-            <img src="images/national-theatre.jpg" alt="Exterior view of the National Theatre in Lagos, featuring its iconic helmet-shaped design against a clear blue sky.">
+            <img src="images/national-theatre.jpg" alt="Exterior view of the National Theatre in Pretoria, featuring its iconic helmet-shaped design against a clear blue sky.">
             <p>National Theatre</p>
         </section>
         <section class="course-certificate-panel">
@@ -72,7 +72,7 @@
         <p>✈️ Tadiwanashe Divine Adelaide Mphame ✈️</p>
         <div class="country">
             <p class="test">South Africa</p>
-            <img src="images/nigeria-flag-icon.svg" alt="South African flag icon">
+            <img src="images/South-Africa.svg.png" alt="South African flag icon">
         </div>
         <p id="lastModified"></p>
     </footer>
