--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">
+        <img src="images/pic.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">
         <h1>Tadiwanashe Divine Adelaide Mphame</h1>
         <button class="hamburger-btn">&#9776;</button>
         <button hidden class="modal-close">X</button>
@@ -72,7 +72,7 @@
         <p>✈️ Tadiwanashe Divine Adelaide Mphame ✈️</p>
         <div class="country">
             <p class="test">South Africa</p>
-            <img src="images/South-Africa.svg.png" alt="South African flag icon">
+            <img src="images/south-africa.jpg" alt="South African flag icon">
         </div>
         <p id="lastModified"></p>
     </footer>
