--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
 
     <!--  Essential META Tags -->
-    <meta property="og:title" content="Tadiwanashe Divine Mphame's WDD 231 Course Homepage">
+    <meta property="og:title" content="Tadiwanashe Divine Adelaide Mphame's WDD 231 Course Homepage">
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lp-cms-production.imgix.net/2022-01/GettyImages-1237639166.jpg?w=1440&h=810&fit=crop&auto=format&q=75">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/">
