--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <img src="images/pic.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">
-        <h1>Tadiwanashe Divine Adelaide Mphame</h1>
+        <h1>Course Homepage - Tadiwanashe Divine Adelaide Mphame</h1>
         <button class="hamburger-btn">&#9776;</button>
         <button hidden class="modal-close">X</button>
     </header>
