--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/">
     <meta name="twitter:card" content="summary_large_image">
 
-    <title>Course Homepage - Tadiwanashe Divine Adelaide Mphame</title>
+    <title>Course Homepage</title>
     <link rel="stylesheet" href="styles/homepage.css">
     <script src="scripts/homepage.js" type="module"></script>
     <!-- Font awesome -->
@@ -26,7 +26,8 @@
 </head>
 <body>
     <header>
-        <img src="images/pic.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">    
+        <img src="images/pic.jpg" alt="Profile picture of Tadiwanashe Divine Adelaide Mphame smiling">  
+        <span>Tadiwanashe Divine Adelaide Mphame</span>
         <button class="hamburger-btn">&#9776;</button>
         <button hidden class="modal-close">X</button>
     </header>
@@ -35,7 +36,7 @@
             <li><a href="#" class="active" id="active">Home</a></li>
             <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
             <li><a href="project/index.html" target="_blank">Project</a></li>
-            <li><a href="https://github.com/chrisedeson" target="_blank">Github Profile</a></li>
+            <li><a href="https://github.com/divinemphame" target="_blank">Github Profile</a></li>
             <li><a href="https://www.linkedin.com/in/divine-mphame" target="_blank">LinkedIn</a></li>
         </ul>
     </nav>
