--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/">
     <meta name="twitter:card" content="summary_large_image">
 
-    <title>Course Homepage</title>
+    <title>Course Homepage- Tadiwanashe Divine Adelaide Mphame</title>
     <link rel="stylesheet" href="styles/homepage.css">
     <script src="scripts/homepage.js" type="module"></script>
     <!-- Font awesome -->
