--- a/chamber/join.html
+++ b/chamber/join.html
@@ -166,8 +166,8 @@
             <a href="https://www.linkedin.com/in/tadiwanashemphame/" target="_blank" class="icon-button" aria-label="Visit Linkedin">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <" target="_blank" class="icon-button" aria-label="Visit Facebook">
-                <i class="fa-brands fa-facebook-Adelaidedivsanderson"></i>
+            <a href="https://www.facebook.com/Adelaidedivsanderson" target="_blank" class="icon-button" aria-label="Visit Facebook">
+                <i class="fa-brands fa-facebook-f"></i>
             </a>
         </div>        
         <div class="copyright-info">
