--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Christopher Edeson">
-    <meta name="description" content="Homepage - Oshodi Chamber of Commerce">
-    <title>Oshodi Chamber of Commerce</title>
+    <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
+    <meta name="description" content="Homepage - Tshwane Chamber of Commerce and Industry">
+    <title>Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/homepage.css">
@@ -20,10 +20,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
     <!-- Socail Media tags -->
-    <meta property="og:title" content="Homepage - Oshodi Chamber of Commerce">
+    <meta property="og:title" content="Homepage - Tshwane Chamber of Commerce and Industry">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chrisedeson.github.io/wdd231/chamber/index.html">
-    <meta property="og:image" content="https://chrisedeson.github.io/wdd231/chamber/images/lagos.jpg">
+    <meta property="og:url" content="https://divinemphame.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="https://divinemphame.github.io/wdd231/chamber/images/pretoria.jpg">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
     <header>
         <img src="images/logo.png" width="34" height="40" alt="Website Logo">
         <div class="title">
-            <h1>Oshodi</h1>
+            <h1>Tshwane Chamber of Commerce and Industry</h1>
             <p>Chamber of Commerce</p>    
         </div> 
         <div class="nav-buttons">
@@ -100,11 +100,11 @@
 
     <footer>
         <div class="website-address">
-            <p class="footer-heading-text"><strong>Oshodi Chamber of Commerce</strong></p>
-            <p>10 Rue De La Paix</p>
-            <p>Oshodi, Mali 999</p>
-            <p>info@Oshodicc.org</p> 
-            <p>(223) 555-2300</p>
+            <p class="footer-heading-text"><strong>Tshwane Chamber of Commerce and Industry</strong></p>
+            <p>41 Kitshoff Street, Rosslyn</p>
+            <p>Pretoria, Gauteng, 0182</p>
+            <p>info@ccbc.co.za</p> 
+            <p>012 542 1308</p>
         </div>
         <div class="social-media-icons">
             <a href="https://www.youtube.com/" target="_blank" class="icon-button" aria-label="Visit YouTube">
@@ -113,17 +113,17 @@
             <a href="https://www.twitter.com/" target="_blank" class="icon-button" aria-label="Visit Twitter">
                 <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="https://www.linkedin.com/in/christopher-edeson/" target="_blank" class="icon-button" aria-label="Visit Linkedin">
+            <a href="https://www.linkedin.com/in/tadiwanashemphame/" target="_blank" class="icon-button" aria-label="Visit Linkedin">
                 <i class="fa-brands fa-linkedin-in"></i>
             </a>
-            <a href="https://www.facebook.com/christopher.edeson" target="_blank" class="icon-button" aria-label="Visit Facebook">
+            <a href="https://www.facebook.com/Adelaidedivsanderson" target="_blank" class="icon-button" aria-label="Visit Facebook">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
         </div>        
         <div class="copyright-info">
             <p>WDD231 Class Project</p>
-            <p>Christopher Edeson</p>
-            <p>&copy; <span id="currentYear"></span> Oshodi Chamber of Commerce</p>
+            <p>Tadiwanashe Divine Adelaide Mphame</p>
+            <p>&copy; <span id="currentYear"></span> Tshwane Chamber of Commerce and Industry</p>
             <p id="lastModified"></p>
         </div>
     </footer>
