--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Thank you page - Tshwane Chamber of Commerce and Industry">
+    <meta name="description" content="Thank you page ">
     <title>Thank you! - Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
