--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Tshwane Chamber of Commerce and Industry is the leading voice of the organized private sector. We provide a platform for businesses to connect, grow, and thrive.">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <title>Directory Page </title>
+    <title>Directory Page-Tshwane Chamber of Commerce and Industry </title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/directory.css">
