--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
     <header>
         <img src="images/logo.png" width="34" height="40" alt="Imbuktu Logo">
         <div class="title">
-            <h1>Tshwane Chamber of Commerce and Industry</h1>
+            <h1>Directory page- Tshwane Chamber of Commerce and Industry</h1>
             <p>Chamber of Commerce</p>    
         </div> 
         <div class="nav-buttons">
