--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Homepage ">
+    <meta name="description" content="Homepage - Explore the Tshwane Chamber of Commerce and Industry's directory to connect with local businesses and services that drive economic growth ">
     <title>Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
