--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Discover page">
+    <meta name="description" content="Discover page - Explore the Tshwane Chamber of Commerce and Industry's directory to connect with local businesses and services that drive economic growth">
     <title>Discover | Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
@@ -37,7 +37,7 @@
     <header>
         <img src="images/logo.png" width="34" height="40" alt="Website Logo">
         <div class="title">
-            <h1>Tshwane Chamber of Commerce and Industry</h1>
+            <h1>Discover | Tshwane Chamber of Commerce and Industry</h1>
             <p>Chamber of Commerce</p>    
         </div> 
         <div class="nav-buttons">
