--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Homepage- Explore the Tshwane Chamber of Commerce and Industry's directory to connect with local businesses and services that drive economic growth">
+    <meta name="description" content="Explore the Tshwane Chamber of Commerce and Industry's webisite to connect with local businesses and services that drive economic growth and join">
     <title>Join - Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
@@ -150,7 +150,7 @@
     </main>
     <footer>
         <div class="website-address">
-            <p class="footer-heading-text"><strong>Oshodi Chamber of Commerce</strong></p>
+            <p class="footer-heading-text"><strong>Tshwane Chamber of Commerce and Industry</strong></p>
             <p>41 Kitshoff Street, Rosslyn</p>
             <p>Pretoria, Gauteng, 0182</p>
             <p>info@ccbc.co.za</p> 
