--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Thank you page-Explore the Tshwane Chamber of Commerce and Industry's directory to connect with local businesses and services that drive economic growth ">
+    <meta name="description" content="Explore the Tshwane Chamber of Commerce and Industry's thank you page and sign up to get more information and connect with local businesses and services that drive economic growth ">
     <title>Thank you! - Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
