--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tadiwanashe Divine Adelaide Mphame">
-    <meta name="description" content="Discover page - Explore the Tshwane Chamber of Commerce and Industry's directory to connect with local businesses and services that drive economic growth">
+    <meta name="description" content="Explore the Tshwane Chamber of Commerce and Industry's discover page and navigate through interesting findings from local businesses and services that drive economic growth">
     <title>Discover | Tshwane Chamber of Commerce and Industry</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/header.css">
