--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,7 @@
 <body>
     <header>
         <div class="title">
-            <h1>Tshwane Chamber of Commerce and Industry's directory</h1>
+            <h1>Directory Page-Tshwane Chamber of Commerce and Industry's directory</h1>
             <p>Chamber of Commerce</p>    
         </div> 
         <img src="images/logo.png" width="34" height="40" alt="Imbuktu Logo">
