--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,8 +38,8 @@
 <body>
     <header>
         <div class="title">
-            <h1>Directory Page-Tshwane Chamber of Commerce and Industry's directory</h1>
-            <p>Chamber of Commerce</p>    
+            <h1>Directory Page-Tshwane Chamber of Commerce and Industry</h1>
+            <p>Chamber of Commerce </p>    
         </div> 
         <img src="images/logo.png" width="34" height="40" alt="Imbuktu Logo">
         <div class="nav-buttons">
