--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
     <header>
         <div class="title">
             <h1>Directory Page-Tshwane Chamber of Commerce and Industry</h1>
-            <p>Chamber of Commerce </p>    
+            <p>POWER </p>    
         </div> 
         <img src="images/logo.png" width="34" height="40" alt="Imbuktu Logo">
         <div class="nav-buttons">
