--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,6 +24,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/chamber/index.html">
     <meta property="og:image" content="https://divinemphame.github.io/wdd231/chamber/images/pretoria.jpg">
+    <meta property="og:description" content="Discover the Tshwane Chamber of Commerce and Industry homepage, your gateway to local businesses and services that foster economic growth." />
+
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
