--- a/chamber/join.html
+++ b/chamber/join.html
@@ -24,6 +24,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/chamber/join.html">
     <meta property="og:image" content="https://divinemphame.github.io/wdd231/chamber/images/pretoria.jpg">
+    <meta property="og:description" content="Discover the Tshwane Chamber of Commerce and Industry Join page, your gateway to local businesses and services that foster economic growth." />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
