--- a/project/explore.html
+++ b/project/explore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Christopher Edeson">
+    <meta name="author" content="Tadiwanashe Divine Mphame">
     <meta name="description" content="Explore a diverse selection of vehicles available for rent or sale. Discover high-quality, affordable options for all your travel needs with NextRide's comprehensive catalog.">
     <title>Explore Vehicles | NextRide</title>
 
@@ -23,7 +23,7 @@
     <!-- Social Media tags -->
     <meta property="og:title" content="Explore Vehicles | NextRide">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chrisedeson.github.io/wdd231/project/index.html">
+    <meta property="og:url" content="https://divinemphame.github.io/wdd231/project/index.html">
     <meta property="og:image" content="https://img.freepik.com/premium-vector/modern-luxury-car-silhouette-vector-illustration_1065789-2660.jpg">
 
     <!-- Google Font -->
@@ -83,7 +83,7 @@
     <footer>
         <div class="footer-phone-hours">
             <span class="phone">
-                +234 906 870 5107
+                +27 61 4744 770
             </span>
             <span class="hours">
                 10 am - midnight
@@ -106,19 +106,19 @@
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/christopher.edeson" target="_blank" aria-label="Visit our Facebook page">
+            <a href="https://www.facebook.com/adelaidedivsanderson" target="_blank" aria-label="Visit our Facebook page">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://www.github.com/chrisedeson" target="_blank" aria-label="Visit our Github page">
+            <a href="https://www.github.com/divinemphame" target="_blank" aria-label="Visit our Github page">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/christopher-edeson" target="_blank" aria-label="Visit our Linkedin page">
+            <a href="https://www.linkedin.com/in/tadiwanashedivinemphame" target="_blank" aria-label="Visit our Linkedin page">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
         </div>
 
         <div class="copyright-wrapper">
-            <p>&copy; 2024 Christopher Edeson | WDD 230 Web Front-End Development I</p>
+            <p>&copy; 2025 Tadiwanashe Divine Mphame | WDD 230 Web Front-End Development I</p>
             <p>All rights reserved</p>
         </div>
     </footer>
