--- a/project/contact.html
+++ b/project/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Christopher Edeson">
+    <meta name="author" content="Tadiwanashe Divine Mphame">
     <meta name="description" content="Get in touch with us for any questions, support, or collaboration opportunities. We're here to help and look forward to connecting with you!">
     <title>Contact Us | NextRide</title>
 
@@ -22,7 +22,7 @@
     <!-- Social Media tags -->
     <meta property="og:title" content="Contact Us | NextRide">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chrisedeson.github.io/wdd231/project/index.html">
+    <meta property="og:url" content="https://divinemphame.github.io/wdd231/project/index.html">
     <meta property="og:image" content="https://img.freepik.com/premium-vector/modern-luxury-car-silhouette-vector-illustration_1065789-2660.jpg">
 
     <!-- Google Font -->
@@ -70,7 +70,7 @@
                         <input type="email" name="email" id="email" placeholder="example@domain.com" autocomplete="email" required>
                     </label>
                     <label for="mobile"><span class="heading-label">Phone Number</span>
-                        <input type="tel" name="mobile" id="mobile" placeholder="+2348012345678" autocomplete="tel" required>
+                        <input type="tel" name="mobile" id="mobile" placeholder="+27614744770" autocomplete="tel" required>
                     </label>
                     <label for="inquiry"><span class="heading-label">Inquiry Type</span>
                         <select name="inquiry" id="inquiry" required>
@@ -127,7 +127,7 @@
     <footer>
         <div class="footer-phone-hours">
             <span class="phone">
-                +234 906 870 5107
+                +27 61 4744 770
             </span>
             <span class="hours">
                 10 am - midnight
@@ -150,19 +150,19 @@
             <a href="https://www.twitter.com" target="_blank" aria-label="Visit our Twitter page">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/christopher.edeson" target="_blank" aria-label="Visit our Facebook page">
+            <a href="https://www.facebook.com/adelaidedivsanderson" target="_blank" aria-label="Visit our Facebook page">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://www.github.com/chrisedeson" target="_blank" aria-label="Visit our Github page">
+            <a href="https://www.github.com/divinemphame" target="_blank" aria-label="Visit our Github page">
                 <i class="fa-brands fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/christopher-edeson" target="_blank" aria-label="Visit our Linkedin page">
+            <a href="https://www.linkedin.com/in/tadiwanashedivinemphame" target="_blank" aria-label="Visit our Linkedin page">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
         </div>
 
         <div class="copyright-wrapper">
-            <p>&copy; 2024 Christopher Edeson | WDD 230 Web Front-End Development I</p>
+            <p>&copy; 2025 Tadiwanashe Divine Adelaide Mphame | WDD 230 Web Front-End Development I</p>
             <p>All rights reserved</p>
         </div>
     </footer>
