--- a/project/contact.html
+++ b/project/contact.html
@@ -92,7 +92,7 @@
                 <h3>Car Rental Options</h3>
                 <div class="package">
                     <h4>Economy Car</h4>
-                    <p><strong>Price:</strong> ₦30/day</p>
+                    <p><strong>Price:</strong> R30/day</p>
                     <p>A compact and fuel-efficient option for city driving.</p>
                     <ul>
                         <li>4 seats</li>
