--- a/project/contact.html
+++ b/project/contact.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="package">
                     <h4>SUV</h4>
-                    <p><strong>Price:</strong> ₦50/day</p>
+                    <p><strong>Price:</strong> R50/day</p>
                     <p>Perfect for families and adventure trips.</p>
                     <ul>
                         <li>5 seats</li>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="package">
                     <h4>Luxury Sedan</h4>
-                    <p><strong>Price:</strong> ₦100/day</p>
+                    <p><strong>Price:</strong> R100/day</p>
                     <p>Experience comfort and style on the road.</p>
                     <ul>
                         <li>5 seats</li>
