--- a/project/index.html
+++ b/project/index.html
@@ -81,7 +81,7 @@
                         <p><i class="fa-solid fa-user-group"></i>4 Persons</p>
                     </div>
                     <div class="car-details-bottom">
-                        <h3>₦99.00 /<span class="car-details-bottom-span">day</span></h3>
+                        <h3>R99.00 /<span class="car-details-bottom-span">day</span></h3>
                         <a href="contact.html" class="cta-button" aria-label="Rent Now">Rent Now</a>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                         <p><i class="fa-solid fa-user-group"></i>4 Persons</p>
                     </div>
                     <div class="car-details-bottom">
-                        <h3>₦129.99 /<span class="car-details-bottom-span">day</span></h3>
+                        <h3>R129.99 /<span class="car-details-bottom-span">day</span></h3>
                         <a href="contact.html" class="cta-button" aria-label="Rent Now">Rent Now</a>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <p><i class="fa-solid fa-user-group"></i>5 Persons</p>
                     </div>
                     <div class="car-details-bottom">
-                        <h3>₦2,499.99</h3>
+                        <h3>R2,499.99</h3>
                         <a href="contact.html" class="cta-button" aria-label="Buy Now">Buy Now</a>
                     </div>
                 </div>
