--- a/project/index.html
+++ b/project/index.html
@@ -25,6 +25,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/project/index.html">
     <meta property="og:image" content="https://img.freepik.com/premium-vector/modern-luxury-car-silhouette-vector-illustration_1065789-2660.jpg">
+    <meta property="og:description" content="NextRide home page.Navigate the homepage and check out on your dream cars." />
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
