--- a/project/contact.html
+++ b/project/contact.html
@@ -24,6 +24,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/project/index.html">
     <meta property="og:image" content="https://img.freepik.com/premium-vector/modern-luxury-car-silhouette-vector-illustration_1065789-2660.jpg">
+    <meta property="og:description" content="Contact page for NextRide.We are all ears." />
+
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
