--- a/project/explore.html
+++ b/project/explore.html
@@ -25,6 +25,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://divinemphame.github.io/wdd231/project/index.html">
     <meta property="og:image" content="https://img.freepik.com/premium-vector/modern-luxury-car-silhouette-vector-illustration_1065789-2660.jpg">
+    <meta property="og:description" content="Explore page of NextPage." />
+
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
