Update header title for branding enhancement

--- a/project/index.html
+++ b/project/index.html
@@ -41,7 +41,7 @@
         <div class="banner">
             <div class="logo-section">
                 <img class="logo" src="images/logo/image-car-banner.jpg" alt="Website Logo" loading="lazy">
-                <h1>Next/Ride</h1>
+                <h1>NextRide – Your Ride, Your Way</h1>
             </div>
             <img class="user-profile-picture" src="images/dp/profile-picture-serious.jpg" alt="user-profile-picture" loading="lazy">
         </div>
